Fixed table too wide issue on credits.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -550,7 +550,7 @@ table caption{
 
 th, td{
     border: 1px solid black;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.75rem;
 }
 
 @media(min-width: 45rem){
